manifests/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app
  labels:
    app: web-app
    role: static
spec:
  containers:
    - name: app
      image: aurelcanciu/example-app-ruby
      ports:
        - containerPort: 3000
          protocol: TCP
          name: http
