manifests/07-configuration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
        role: static
    spec:
      containers:
        - name: app
          image: aurelcanciu/example-app-ruby
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          volumeMounts:
            - name: config-volume
              mountPath: /tmp/config
          resources:
            requests:
              cpu: 0.1
              memory: 50Mi
            limits:
              cpu: 0.25
              memory: 100Mi
      volumes:
        - name: config-volume
          configMap:
            name: web-app-file
